FIX: tweaking blurry fonts

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,6 +6,7 @@ body {
     line-height: $base-line-height;
     color: $text-color;
     background-color: $bg-color;
+    -webkit-filter: blur(0)
 }
 p {
     text-align: justify;
